# docs/swagger.json
@@ -18,7 +18,7 @@
     "host": "metering-svc-hnc-metering.apps.blackwhale.cloud.hancom.com",
     "basePath": "/api",
     "paths": {
-        "/{namespace}/count": {
+        "/count/{container}": {
             "get": {
                 "description": "특정기간동안 검색된 namespace",
                 "consumes": [
@@ -31,8 +31,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "namespace name",
-                        "name": "namespace",
+                        "description": "container name",
+                        "name": "container",
                         "in": "path",
                         "required": true
                     },
@@ -48,6 +48,35 @@
                         "description": "end",
                         "name": "end",
                         "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/cpu/{container}": {
+            "get": {
+                "description": "현재 cpu 사용량",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "cpu usage",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "container name",
+                        "name": "container",
+                        "in": "path",
                         "required": true
                     }
                 ],
